--- a/public/homepage.html
+++ b/public/homepage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Teachable Test</title>
     <link href="assets/css/style.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/6eb68ff3ac.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -18,13 +19,20 @@
     </header>
     <main>
 	    <div class="container">
+        <div class="row">
+          <div class="message col-lg-12">
+            <div class="msg-center">
+            </div>
+          </div>
+        </div>
+
 	    	<div class="row">
 	    		<div class="sidebar-left col-xs-12 col-sm-4">
 
-	    			<form action="action_page.php">
+	    			<form>
               <h1>Please Register</h1>
-						  <input type="text" name="username" value="username">
-						  <input type="text" name="email" value="email">
+						  <input type="text" id="username" name="username" value="username">
+						  <input type="text" id="email" name="email" value="email">
 						  <input type="submit" value="Submit">
 						</form>
 
@@ -48,6 +56,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript">
+      // list out all registrants on page load
       $.ajax({
         url:'/',
         dataType: 'json',
@@ -58,9 +67,36 @@
 
       function showGuests(data){
         $.each(data.guests, function(i, guest) {
-            $(".registrants-list").append("<li>" + guest.name + "(" + guest.email + ")</li>");
+            $(".registrants-list").append("<li><div class='order-bar'><i class='fa fa-bars' aria-hidden='true'></i></div> " + "<div class='guest-info'>" + guest.name + " (" + guest.email + ")</div>" + "<div class='remove'><span class='glyphicon glyphicon-remove'></span></div></li>");
         });
+      };
+
+      // show registrant
+      function showGuest(guest){
+        $(".registrants-list").append("<li><div class='order-bar'><i class='fa fa-bars' aria-hidden='true'></i></div> " + "<div class='guest-info'>" + guest.name + " (" + guest.email + ")</div>" + "<div class='remove'><span class='glyphicon glyphicon-remove'></span></div></li>");
       }
+
+      // form submit
+      $('form').on('submit', function(e){
+        e.preventDefault();
+        var data = {};
+
+        // get data from form
+        data.name = $('#username').val();
+        data.email = $('#email').val();
+
+        $.ajax({
+          url: '/',
+          type: 'POST',
+          data: data,
+          success: function(msg){
+            // show registered message
+            $('.msg-center').show().html(msg);
+            // show in registrants box
+            showGuest(data);
+          }
+        });
+      })
     </script>
   </body>
 </html>
