--- a/public/homepage.html
+++ b/public/homepage.html
@@ -57,7 +57,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-
+      // drag and drop functionality
       $("#sortable").sortable({
         revert: true,
         cursor: "move"
@@ -73,18 +73,19 @@
         showGuests(data);
       });
 
+      // show all registrants
       function showGuests(data){
         $.each(data.guests, function(i, guest) {
-            $(".registrants-list").append("<li><div class='order-bar'><i class='fa fa-bars' aria-hidden='true'></i></div> " + "<div class='guest-info'>" + guest.name + " (" + guest.email + ")</div>" + "<div class='remove'><span class='glyphicon glyphicon-remove'></span></div></li>");
+            $(".registrants-list").append("<li><div class='order-bar'><i class='fa fa-bars' aria-hidden='true'></i></div> " + "<div class='guest-name'>" + guest.name + "</div>" + " (" + "<div class='guest-email' data-email='" + guest.email + "'>" + guest.email + "</div>)" + "<div class='remove'><span class='glyphicon glyphicon-remove'></span></div></li>");
         });
       };
 
-      // show registrant
-      function showGuest(guest){
-        $(".registrants-list").append("<li><div class='order-bar'><i class='fa fa-bars' aria-hidden='true'></i></div> " + "<div class='guest-info'>" + guest.name + " (" + guest.email + ")</div>" + "<div class='remove'><span class='glyphicon glyphicon-remove'></span></div></li>");
+      // add registrant
+      function addGuest(guest){
+        $(".registrants-list").append("<li><div class='order-bar'><i class='fa fa-bars' aria-hidden='true'></i></div> " + "<div class='guest-name'>" + guest.name + "</div>" + " (" + "<div class='guest-email' data-email='" + guest.email + "'>" + guest.email + "</div>)" + "<div class='remove'><span class='glyphicon glyphicon-remove'></span></div></li>");
       }
 
-      // form submit
+      // form submit new registrant
       $('form').on('submit', function(e){
         e.preventDefault();
         var data = {};
@@ -101,10 +102,27 @@
             // show registered message
             $('.msg-center').show().html(msg);
             // show in registrants box
-            showGuest(data);
+            addGuest(data);
           }
         });
       })
+
+      // delete registrants
+      $(document).on('click', '.remove', function(){
+        var email = $(this).prev('div').data('email');
+        var guestInfo = $(this).closest('li');
+
+        $.ajax({
+          url: '/' + email,
+          type: 'DELETE',
+          data: email,
+          success: function(d){
+            $('.msg-center').show().html(d);
+            guestInfo.remove();
+          }
+        });
+      })
+
     </script>
   </body>
 </html>
