--- a/public/homepage.html
+++ b/public/homepage.html
@@ -63,7 +63,23 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
+    <script id="guestListTmp" type="text/x-jquery-tmpl">
+      <li>
+        <div class='order-bar'>
+          <i class='fa fa-bars' aria-hidden='true'></i>
+        </div>
+
+        <div class='guest-name'>${name}</div>
+
+        <div class='guest-email' data-email='${email}'>(${email})</div>
+
+        <div class='remove'>
+          <span class='glyphicon glyphicon-remove'></span>
+        </div>
+      </li>
+    </script>
   </body>
 </html>
